# brick

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs  game_data.proto
.github/workflows/: main.yml
brain/: Cargo.toml
brain/src/: lib.rs  plan.rs  play.rs
brain/tests/: accuracy_test.rs
brick/: Cargo.toml  build.rs
brick/src/: main.rs
data/samples/: max_speed_throttle_left.csv  max_speed_throttle_right.csv  rest_throttle_left.csv  rest_throttle_right.csv
generate-data/: Cargo.toml
generate-data/src/: main.rs
heuristic/: Cargo.toml
heuristic/src/: basic.rs  hybrid_knn.rs  knn.rs  lib.rs  neural.rs
heuristic/train/nn/: README.md  train-nn.py  visualize-graph.py
passthrough/: Cargo.toml
passthrough/src/: lib.rs
predict/: Cargo.toml
predict/src/: arena.rs  ball.rs  driving_model.rs  lib.rs  player.rs  sample.rs
predict/tests/: compare_with_sample_files.rs
record/: Cargo.toml
record/src/: main.rs
rlbot/: Cargo.toml
rlbot/src/: bindings.rs  lib.rs
src/: game_data.rs  game_data_grpc.rs  main.rs  state.rs
state/: Cargo.toml
state/src/: lib.rs
temp/: Cargo.toml  max_speed_throttle_left.csv  max_speed_throttle_right.csv  rest_throttle_left.csv  rest_throttle_right.csv
temp/src/: main.rs
