[package]
name = "brick"
version = "0.1.0"
authors = ["Ehsanul"]

[dependencies]
docopt = "1"
nalgebra = "*"
kiss3d = "*"
lazy_static = "1.0"
crossbeam = "0.4"
rlbot = "0.4.0"
ratelimit = "0.4.3"

[dependencies.state]
path = "../state"

[dependencies.passthrough]
path = "../passthrough"

[dependencies.brain]
path = "../brain"
