[package]
name = "heuristic"
version = "0.1.0"
authors = ["Ehsanul Hoque <ehsanul@ehsanul.com>"]

[features]
neural = ["tensorflow"]

[dependencies]
kdtree = "0.5.1"
nalgebra = "*"
ord_subset = "3"
csv = "*"

tensorflow = { version = "0.12.0", optional = true }

[dependencies.state]
path = "../state"
