[package]
name = "predict"
version = "0.1.0"
authors = ["Ehsanul Hoque <ehsanul@ehsanul.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
bincode = "*"
flate2 = "1.0"
ncollide3d = "*"
nalgebra = "*"
fnv = "1.0"
obj-rs = "0.4"
lazy_static = "1.0"
csv = "1"
walkdir = "2.0"

[dependencies.state]
path = "../state"
