[package]
name = "record"
version = "0.1.0"
authors = ["Ehsanul Hoque <ehsanul@ehsanul.com>"]

[dependencies]
csv = "1"
flatbuffers = "0.5.0"
gilrs = "0.6.0"
rand = "0.7"
spin_sleep = "1"
#rlbot = "0.7.0"
rlbot  = { git = "https://github.com/RLBot/rlbot-rust", rev = "01bafee" }

[dependencies.state]
path = "../state"

[dependencies.predict]
path = "../predict"
