[package]
name = "state"
version = "0.1.0"
authors = ["Ehsanul Hoque <ehsanul@ehsanul.com>"]

[dependencies]
lazy_static = "1.0"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"
#rlbot = "0.7.0"
rlbot  = { git = "https://github.com/RLBot/rlbot-rust", rev = "01bafee", default-features = false }

[dependencies.nalgebra]
version = "*"
features = ["serde-serialize"]
